# fraudes_incapacidades1

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/fraude_incapacidades/: api.py  crew.py  main.py
src/fraude_incapacidades/config/: agents.yaml  tasks.yaml
src/fraude_incapacidades/tools/: extraction_tools.py  ocr_tool.py  verification_tools.py
